Add workflow and GeoAPI data stores (#435)
The workflow enables to describe and execute graphs of tasks. The tasks can be serialized json files hence enabling the user to customize its workflow. Furthermore, various data stores implementing the GeoAPI interfaces enable to import Shapefiles and GeoPackages in Postgresql.