@@ -14,10 +14,9 @@
 
 package com.baremaps.server.ogcapi;
 
-import com.baremaps.core.tile.PostgresQuery;
+import com.baremaps.database.tile.PostgresQuery;
 import com.baremaps.model.TileJSON;
 import java.util.List;
-import java.util.stream.Collectors;
 import javax.inject.Singleton;
 
 @Singleton
@@ -35,6 +34,6 @@ public class Conversions {
                                 query.getMinzoom(),
                                 query.getMaxzoom(),
                                 query.getSql())))
-        .collect(Collectors.toList());
+        .toList();
   }
 }
