@@ -18,24 +18,23 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
 
 class NicParserTest {
 
   @Test
   void parseObjects() throws IOException {
-    List<NicObject> nicObjects = NicData.sample("sample.txt");
+    List<NicObject> nicObjects = NicData.sample("ripe/sample.txt");
     assertEquals(11, nicObjects.size());
   }
 
   @Test
   void parseAttributes() throws IOException {
     List<NicAttribute> nicAttributes =
-        NicData.sample("sample.txt").stream()
+        NicData.sample("ripe/sample.txt").stream()
             .map(NicObject::attributes)
             .flatMap(List::stream)
-            .collect(Collectors.toList());
+            .toList();
     assertEquals(233, nicAttributes.size());
   }
 }
