@@ -15,11 +15,11 @@
 package com.baremaps.osm.function;
 
 import com.baremaps.collection.LongDataMap;
-import com.baremaps.osm.domain.Member;
-import com.baremaps.osm.domain.Member.MemberType;
-import com.baremaps.osm.domain.Node;
-import com.baremaps.osm.domain.Relation;
-import com.baremaps.osm.domain.Way;
+import com.baremaps.osm.model.Member;
+import com.baremaps.osm.model.Member.MemberType;
+import com.baremaps.osm.model.Node;
+import com.baremaps.osm.model.Relation;
+import com.baremaps.osm.model.Way;
 import com.baremaps.stream.StreamException;
 import java.util.ArrayList;
 import java.util.HashSet;
@@ -27,7 +27,6 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.locationtech.jts.geom.Coordinate;
 import org.locationtech.jts.geom.Geometry;
 import org.locationtech.jts.geom.GeometryFactory;
@@ -78,8 +77,7 @@ public class CreateGeometryConsumer implements EntityConsumerAdapter {
   @Override
   public void match(Way way) {
     try {
-      List<Coordinate> list =
-          way.getNodes().stream().map(coordinates::get).collect(Collectors.toList());
+      List<Coordinate> list = way.getNodes().stream().map(coordinates::get).toList();
       Coordinate[] array = list.toArray(new Coordinate[list.size()]);
       LineString line = geometryFactory.createLineString(array);
       if (!line.isEmpty()) {
@@ -209,7 +207,7 @@ public class CreateGeometryConsumer implements EntityConsumerAdapter {
   private LineString createLine(Member member) {
     try {
       List<Long> refs = this.references.get(member.getRef());
-      List<Coordinate> coords = refs.stream().map(coordinates::get).collect(Collectors.toList());
+      List<Coordinate> coords = refs.stream().map(coordinates::get).toList();
       Coordinate[] array = coords.toArray(new Coordinate[coords.size()]);
       return geometryFactory.createLineString(array);
     } catch (Exception e) {
